# protein-prediction-2-2020

./: .gitignore  2class_prediction.ipynb  README.md  data-statistics.ipynb  embeddings_all_v_all.ipynb  linear_search_results_8_10.json  linear_search_results_without_rand_guess.json  load_annotations.ipynb  results_s_7.0.m8  results_s_9.0.m8
safa/: .gitignore  data-statistics-and-baseline.ipynb  linear_search_results_with_rand_guess.json  vis.py
sebastian/: Makefile  pyproject.toml
sebastian/results/: linear_search_results.json
sebastian/src/protein-prediction-2-2020/data_processing/: statistics.py
sebastian/src/protein-prediction-2-2020/mmseq_baseline/: evluate.py  result_test.m8  result_val.m8  run_against_train_data.py
sebastian/src/protein_prediction_2_2020/data_processing/: statistics.py
sebastian/src/protein_prediction_2_2020/mmseq_baseline/: evluate.py  result_test.m8  result_val.m8  run_against_train_data.py
sebastian/src/protein_prediction_2_2020/neural_networks/models/: AttentionModels.py  CNNModels.py  PLModel.py  SimpleCNN.py  SimpleLSTM.py  __init__.py
sebastian/src/protein_prediction_2_2020/neural_networks/utils/: dataset.py  pl_trainer.py
