[tool.poetry]
name = "protein-prediction-2-2020"
version = "0.1.0"
description = ""
authors = ["Sebastian Fellner <fellnerseb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.78"
numpy = "^1.19.4"
torch = "^1.7.0"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
